--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@angular/common": "^14.1.3",
     "@angular/compiler": "^14.1.3",
     "@angular/core": "^14.1.3",
+    "@angular/elements": "^14.2.12",
     "@angular/forms": "^14.1.3",
     "@angular/platform-browser": "^14.1.3",
     "@angular/platform-browser-dynamic": "^14.1.3",
